Fixed collapse

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -163,7 +163,7 @@ div.repo-tags {
 }
   
 #summary a.show-more:not(.collapsed):after {
-    content: "Show less";
+    content: "";
 }
 
 
